Settings management squeleton (#133)
* first squeleton to manage users and parameters management

* manage the responsivity

* fix profil

* fix login label : identifiant ou email

* Update Profile

* re-org update profile form

* Update settings screens

* add administration edition

* enhance uniqueness of fields and add user edition

* enhance user management

* remove useless print

* merge profil and parameters links in dropdown menu

* update page titles in settings

* Add filters and sort on parmreters

* better management of pluralize

* bootstrap dropdown menu

* clean up documents

* Add bailleur to user and remove some useless documents

* remove bailleur from user

* Add and remove administration for a user'

* manage add user

* fix regressions

* fix tests

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -199,7 +199,6 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
   stroke-linecap: square;
   stroke-linejoin: miter;
   fill: none;
-  background: var(--white);
   border-radius: 4px;
   display: inline-block;
   margin: 0.25rem;
@@ -302,3 +301,21 @@ table.fullwidth {
   cursor: pointer;
 }
 
+.apilos-sidemenu {
+  min-width: 285px;
+}
+
+.apilos-settings--justify {
+  display: flex;
+  flex-direction: row;
+  align-items: top;
+  justify-content: left;
+}
+
+.apilos-dropdown-menu a {
+  float: none;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
