--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -22,7 +22,7 @@
                     {% elif request.session.is_instructeur or request.user.is_superuser %}
                         <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
                     {% else %}
-                        <p class="fr-mb-3w">Votre profile n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
+                        <p class="fr-mb-3w">Votre profil n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
                     {% endif %}
                 </div>
             </div>
@@ -33,7 +33,7 @@
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-col-md-12 ">
 
-                <form class="fr-my-3w" method="get" action="" id="search_conventions">
+                <form class="fr-my-3w" method="get" action="" id="search_table">
                     <input type="hidden" id="order_by" name="order_by" value="{{order_by}}">
                     <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
@@ -91,36 +91,36 @@
                                     {% if request.session.is_instructeur %}
                                         <th scope="col">
                                             Bailleur
-                                            {% include "common/display_order_icon.html" with order_by=order_by order_by_column='bailleur__nom' url_target='conventions:index' %}
+                                            {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='bailleur__nom' url_target='conventions:index' %}
                                         </th>
                                         <th scope="col">
                                             Numéro Galion
-                                            {% include "common/display_order_icon.html" with order_by=order_by order_by_column='programme__numero_galion' url_target='conventions:index' %}
+                                            {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='programme__numero_galion' url_target='conventions:index' %}
                                         </th>
                                     {% endif %}
                                     <th scope="col">
                                         Mise en service
-                                        {% include "common/display_order_icon.html" with order_by=order_by order_by_column='programme__date_achevement_compile' url_target='conventions:index' %}
+                                        {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='programme__date_achevement_compile' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col">
                                         Programme
-                                        {% include "common/display_order_icon.html" with order_by=order_by order_by_column='programme__nom' url_target='conventions:index' %}
+                                        {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='programme__nom' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col">
                                         Financement
-                                        {% include "common/display_order_icon.html" with order_by=order_by order_by_column='lot__financement' url_target='conventions:index' %}
+                                        {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='lot__financement' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col">
                                         Ville
-                                        {% include "common/display_order_icon.html" with order_by=order_by order_by_column='programme__ville' url_target='conventions:index' %}
+                                        {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='programme__ville' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col">
                                         Nombre de logements à conventionner
-                                        {% include "common/display_order_icon.html" with order_by=order_by order_by_column='lot__nb_logements' url_target='conventions:index' %}
+                                        {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='lot__nb_logements' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col">
                                         Statut
-                                        {% include "common/display_order_icon.html" with order_by=order_by order_by_column='statut' url_target='conventions:index' %}
+                                        {% include "common/table/display_order_icon.html" with order_by=order_by order_by_column='statut' url_target='conventions:index' %}
                                     </th>
                                     <th scope="col" class="col__width--140">Action</th>
                                 </tr>
