--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -66,26 +66,30 @@
                                         Bonjour&nbsp;
                                         <strong>{{ user }}</strong>
                                     </li>
-                                    {% if CERBERE_AUTH %}
-                                        <li>
-                                            <button class="fr-btn  fr-btn--secondary" id='cerbere_logout'>
-                                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
-                                                </span>Cerbere logout
+                                    <li class="apilos-navbar">
+                                        <div class="btn-group">
+                                            <button type="button" class="dropdown-toggle fr-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <span class="fr-fi-menu-fill" aria-hidden="true"></span>
                                             </button>
-                                            {% include "common/utils/onclick_redirect.html" with id='cerbere_logout' url_target='cas_ng_logout' url_params='?next=/' %}
-                                        </li>
-                                    {% else %}
-                                        <li>
-                                            <button class="fr-btn fr-btn--secondary" id='deconnexion'>
-                                                <span class="fr-fi-close-circle-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
-                                            </button>
-                                            {% include "common/utils/onclick_redirect.html" with id='deconnexion' url_target='logout' %}
-                                        </li>
-                                    {% endif %}
-                                    <li>
-                                        <a class="fr-link fr-text--lg" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                            <span class="fr-fi-question-line" aria-hidden="true"></span>&nbsp;FAQ
-                                        </a>
+                                            <div class="dropdown-menu dropdown-menu-right apilos-dropdown-menu">
+                                                {% if CERBERE_AUTH %}
+                                                    <a href="{% url 'cas_ng_logout' %}?next=/">
+                                                        <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true">
+                                                        </span>Cerbere logout
+                                                    </a>
+                                                {% else %}
+                                                    <a href="{% url 'logout' %}">
+                                                        <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
+                                                    </a>
+                                                {% endif %}
+                                                <a href="{% url 'settings:profile' %}">
+                                                    <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
+                                                </a>
+                                                <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
+                                                    <span class="fr-fi-question-line" aria-hidden="true"></span>&nbsp;FAQ
+                                                </a>
+                                            </div>
+                                        </div>
                                     </li>
                                 </ul>
 
@@ -125,6 +129,13 @@
                         </div>
                     </div>
                 {% endif %}
+            </div>
+        </div>
+    </div>
+    <div class="fr-header__menu fr-modal" id="modal-404" aria-labelledby="button-405">
+        <div class="fr-container">
+            <button class="fr-link--close fr-link" aria-controls="modal-404">Fermer</button>
+            <div class="fr-header__menu-links">
             </div>
         </div>
     </div>
