Add a help button about generate convention doc

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -694,6 +694,8 @@
                                     <button class="fr-btn">
                                         Générer et Télécharger la convention
                                     </button>
+                                    <a class="fr-link fr-fi-information-line" href="https://docs.apilos.beta.gouv.fr/utiliser-la-plateforme/comment-signer-une-convention#generer-la-convention-au-format-word-ou-openoffice" target="_blank"></a>
+
                                 </form>
                             </div>
                         {% else %}
