--- a/templates/bailleurs/form_content.html
+++ b/templates/bailleurs/form_content.html
@@ -8,7 +8,7 @@
         <div class="fr-mb-2w">
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                    {% include "common/form/input_text.html" with form_input=form.siret label="SIRET ou SIREN" object_field="bailleur__siret__"|add:form.uuid.value %}
+                    {% include "common/form/input_text.html" with form_input=form.siret label="SIRET" object_field="bailleur__siret__"|add:form.uuid.value %}
                 </div>
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
                     {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social label="Capital social" mandatory=False object_field="bailleur__capital_social__"|add:form.uuid.value %}
