--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -72,6 +72,12 @@
                                                 <span class="fr-fi-menu-fill" aria-hidden="true"></span>
                                             </button>
                                             <div class="dropdown-menu dropdown-menu-right apilos-dropdown-menu">
+                                                <a href="{% url 'settings:profile' %}">
+                                                    <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
+                                                </a>
+                                                <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
+                                                    <span class="fr-fi-question-line fr-mr-1w" aria-hidden="true"></span>Aide en ligne
+                                                </a>
                                                 {% if CERBERE_AUTH %}
                                                     <a href="{% url 'cas_ng_logout' %}?next=/">
                                                         <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true">
@@ -82,12 +88,6 @@
                                                         <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
                                                     </a>
                                                 {% endif %}
-                                                <a href="{% url 'settings:profile' %}">
-                                                    <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
-                                                </a>
-                                                <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                                    <span class="fr-fi-question-line" aria-hidden="true"></span>&nbsp;FAQ
-                                                </a>
                                             </div>
                                         </div>
                                     </li>
