update FAQ link to remove text

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -120,8 +120,8 @@
                                         </li>
                                     {% endif %}
                                     <li>
-                                        <a class="fr-link fr-text--lg" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                            <span class="fr-fi-question-line" aria-hidden="true"></span>&nbsp;FAQ
+                                        <a class="fr-link fr-text--lg" href="//docs.apilos.beta.gouv.fr" alt="Aide en ligne" title="Aide en ligne" target="_blank" rel="noopener">
+                                            <span class="fr-fi-question-line" aria-hidden="true"></span>
                                         </a>
                                     </li>
                                 </ul>
