--- a/templates/common/table/display_order_icon.html
+++ b/templates/common/table/display_order_icon.html
@@ -12,7 +12,7 @@
     document.addEventListener('DOMContentLoaded', function () {
         document.getElementById('{{ order_by_column }}')
             .addEventListener('click', function(){
-            if (document.getElementById !== null) {
+            if (document.getElementById('page') !== null) {
                 document.getElementById('page').value = "1"
             }
             document.getElementById('order_by').value = "{% if order_by == order_by_column %}-{% endif %}{{ order_by_column }}"
