load highcharts lib remotly

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -5,8 +5,8 @@
 {% block page_title %}Stats - APiLos{% endblock%}
 
 {% block javascript_extras %}
-    <script type="text/javascript" src="{% static "highcharts/highcharts.js" %}" nonce="{{request.csp_nonce}}"></script>
-    <script type="text/javascript" src="{% static "highcharts/themes/high-contrast-light.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/highcharts.js" nonce="{{request.csp_nonce}}"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/themes/high-contrast-light.js" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 {% block css_extras %}
