--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -4,32 +4,104 @@
 
 {% block page_title %}Stats - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script type="text/javascript" src="https://code.highcharts.com/highcharts.js" nonce="{{request.csp_nonce}}"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/themes/high-contrast-light.js" nonce="{{request.csp_nonce}}"></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="https://code.highcharts.com/css/highcharts.css" nonce="{{request.csp_nonce}}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        <div class="fr-container">
+        <div class="fr-container fr-pb-3w">
             <h1 class="fr-pt-5w">Conventions</h1>
             <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12" id="conv_by_departement">s</div>
+                <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                    document.addEventListener('DOMContentLoaded', function () {
+                        const chart = Highcharts.chart('conv_by_departement', {
+                            chart: {
+                                type: 'column',
+                                styledMode: true
+                            },
+                            colors: ['#2f7ed8', '#0d233a', '#8bbc21', '#910000', '#1aadce',
+                                '#492970', '#f28f43', '#77a1e5', '#c42525', '#a6c96a'],
+                            title: {
+                                text: 'Nombre de conventions par statut et par département'
+                            },
+                            xAxis: {
+                                title: {
+                                    text: 'Départements'
+                                },
+                                categories: [{{ conv_bydept.departement|join:',' }}]
+                            },
+                            yAxis: {
+                                min: 0,
+                                title: {
+                                    text: 'Conventions par département'
+                                },
+                                stackLabels: {
+                                    enabled: true,
+                                    style: {
+                                        fontWeight: 'bold',
+                                        color: ( // theme
+                                            Highcharts.defaultOptions.title.style &&
+                                            Highcharts.defaultOptions.title.style.color
+                                        ) || 'gray'
+                                    }
+                                }
+                            },
+                            plotOptions: {
+                                column: {
+                                    stacking: 'normal',
+                                    dataLabels: {
+                                        enabled: true
+                                    }
+                                }
+                            },
+                            series: [{
+                                name: 'Brouillon',
+                                data: {{ conv_bydept.BROUILLON }}
+                            }, {
+                                name: "En cours d'instruction",
+                                data: {{ conv_bydept.INSTRUCTION }}
+                            }, {
+                                name: "Correction requise",
+                                data: {{ conv_bydept.CORRECTION }}
+                            }, {
+                                name: "Validée",
+                                data: {{ conv_bydept.VALIDE }}
+                            }, {
+                                name: "Clos",
+                                data: {{ conv_bydept.CLOS }}
+                            }]
+                        });
+                    });
+                </script>
+
                 <div class="fr-col-12 fr-col-md-6 fr-col-lg-3">
-                    <div class="fr-m-3w statcard">
-                        <h3 class="statcard__title">BROUILLON</h4>
+                    <div class="fr-m-3w statcard statcard--color1">
+                        <div class="statcard__title">BROUILLON</div>
                         <p class="statcard__indicateur">{{ conventions_by_status.BROUILLON }}</p>
                     </div>
                 </div>
                 <div class="fr-col-12 fr-col-md-6 fr-col-lg-3">
-                    <div class="fr-m-3w statcard">
-                        <h3 class="statcard__title">EN COURS D'INSTRUCTION</h3>
+                    <div class="fr-m-3w statcard statcard--color2">
+                        <div class="statcard__title">EN COURS D'INSTRUCTION</div>
                         <p class="statcard__indicateur">{{ conventions_by_status.INSTRUCTION }}</p>
                     </div>
                 </div>
                 <div class="fr-col-12 fr-col-md-6 fr-col-lg-3">
-                    <div class="fr-m-3w statcard">
-                        <h3 class="statcard__title">EN COURS DE CORRECTION</h3>
+                    <div class="fr-m-3w statcard statcard--color3">
+                        <div class="statcard__title">EN COURS DE CORRECTION</div>
                         <p class="statcard__indicateur">{{ conventions_by_status.CORRECTION }}</p>
                     </div>
                 </div>
                 <div class="fr-col-12 fr-col-md-6 fr-col-lg-3">
-                    <div class="fr-m-3w statcard">
-                        <h3 class="statcard__title">VALIDÉ</h3>
+                    <div class="fr-m-3w statcard statcard--color4">
+                        <div class="statcard__title">VALIDÉ</div>
                         <p class="statcard__indicateur">{{ conventions_by_status.VALIDE }}</p>
                     </div>
                 </div>
@@ -38,17 +110,15 @@
             <h1 class="fr-pt-5w">Users</h1>
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6">
-                    <div class="fr-m-3w statcard">
-                        <h3 class="statcard__title">BAILLEUR</h4>
-                        <p class="statcard__indicateur">{{ users_by_role.nb_bailleurs }}</p>
-                        <p class="statcard__details">dont {{ users_by_role.nb_bailleurs_actifs }} actifs : s'étant loggé au moins 1 fois sur la plateforme</p>
+                    <div class="fr-m-3w statcard statcard--color6">
+                        <div class="statcard__title">BAILLEURS</div>
+                        <p class="statcard__indicateur">{{ users_by_role.nb_bailleurs_actifs }} actifs / {{ users_by_role.nb_bailleurs }}</p>
                     </div>
                 </div>
-                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6">
-                    <div class="fr-m-3w statcard">
-                        <h3 class="statcard__title">INSTRUCTEUR</h3>
-                        <p class="statcard__indicateur">{{ users_by_role.nb_instructeurs }}</p>
-                        <p class="statcard__details">dont {{ users_by_role.nb_instructeurs_actifs }} actifs : s'étant loggé au moins 1 fois sur la plateforme</p>
+                <div class="fr-col-12 fr-col-md-6 fr-col-lg-6">
+                    <div class="fr-m-3w statcard statcard--color7">
+                        <div class="statcard__title">INSTRUCTEURS</div>
+                        <p class="statcard__indicateur">{{ users_by_role.nb_instructeurs_actifs }} actifs / {{ users_by_role.nb_instructeurs }}</p>
                     </div>
                 </div>
             </div>
