s271: update base line

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -54,7 +54,8 @@
                         <a href="/" title="Accueil - APiLos">
                             <p class="fr-header__service-title">APiLos</p>
                         </a>
-                        <p class="fr-header__service-tagline">Le portail qui simplifie le conventionnement APL pour le logement social</p>
+                        <p class="fr-header__service-tagline">Le portail qui facilite l’accès aux logements sociaux par la simplification des conventions</p>
+                        <p class="fr-header__service-tagline fr-text--sm"><i>Un service du SIAP (Système d'Information des Aides à la Pierre)</i></p>
                     </div>
                 </div>
                 {% if not without_action_button %}
