S283: update Annexe title

--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -30,7 +30,7 @@
                             <p>la déclaration des stationnements par type se fera à la prochaine étape</p>
                         </div>
 
-                        <h4>Annexes associés aux logements exclues du calcul de la surface utile</h4>
+                        <h4>Annexes associés aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
 
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='annexes' upform=upform  what='annexes'%}
