--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -26,8 +26,8 @@
                     <div class="fr-col-md-12">
 
                         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                            <p>Attention, les annexes concernées sont ici les jardins, les caves et les terrasses</p>
-                            <p>la déclaration des stationnements par type se fera à la prochaine étape</p>
+                            <p>Attention, les annexes concernées sont ici les jardins, les caves et les surfaces de terrasse au-delà de 9 m² (ex : Pour une terrasse d’une surface totale de 10 m², renseignez ici uniquement 1 m², les 9m² sont intégrés dans le calcul de la surface utile)</p>
+                            <p>La déclaration des stationnements par type se fera à la prochaine étape</p>
                         </div>
 
                         <h4>Annexes associés aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
