--- a/static/css/main.css
+++ b/static/css/main.css
@@ -398,3 +398,24 @@ table.fullwidth {
   display: block;
   text-align: left;
 }
+
+#loading {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 999;
+}
+
+#loading-image {
+  position: absolute;
+  width: 4%;
+  top: 48%;
+  left: 48%;
+  z-index: 1000;
+}
